Port DiagnosticsController (first pass)
Instrumentation is now working.